# irnl_rdt_correction

./: .buildinfo  .gitignore  .zenodo.json  README.md  environment.pickle  genindex.html  index.doctree  index.html  main.doctree  main.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tools.doctree  tools.html
.github/workflows/: coverage.yml  cron.yml  documentation.yml  publish.yml  tests.yml
_modules/: index.html
_modules/irnl_rdt_correction/: equation_system.html  input_options.html  io_handling.html  irnl_rdt_correction.html  main.html  rdt_handling.html  utilities.html
_sources/: index.rst.txt
doc/: Makefile  conf.py  index.rst  main.rst  tools.rst
irnl_rdt_correction/: __init__.py  __main__.py  constants.py  equation_system.py  input_options.py  io_handling.py  irnl_rdt_correction.py  main.py  rdt_handling.py  utilities.py
latex/: 01_motivation.tex  02_background.tex  03_implementation.tex  04_applications.tex  05_conclusion.tex  appendix.tex  backrefpatch.cls  library_jdilly.bib  note.tex  siamurl.bst  simplenote.cls  useful_components.tex  userdef.tex
tests/: helpers.py  test_commandline.py  test_dual_optics_correction.py  test_feeddown_correction.py  test_rdts_correction.py  test_standard_correction.py  test_unit_inputs.py  test_units.py
tests/unit/: test_irnl_rdt_correction.py
